# audio-separation-nodes-comfyui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  _types.py  combine.py  crop.py  optimized pyproject.toml  pyproject.toml  requirements.txt  resample.py  separation.py  tempo_match.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  publish.yml  tests.yml
example_workflows/: Isolate Vocals from Video.json  Replace BGM with Stable-Audio-Generated Music.json
examples/: ComfyUI_00036_.flac
src/: _types.py  audio_new_list.py  audio_video_logic.py  beat_allignment.py  combine.py  combine_video_with_audio.py  crop.py  get_tempo.py  list_get.py  resample.py  separation.py  speech_to_text.py  split_equal.py  stitch.py  tempo_match.py  time_shift.py  utils.py
tests/: conftest.py  test_audio_video_combine_node.py  test_audio_video_logic.py  test_combine.py  test_crop.py  test_get_tempo.py  test_init.py  test_resample.py  test_separation.py  test_tempo_match.py  test_time_shift.py  test_utils.py
web/js/: jsnodes.js
wiki/examples/: ComfyUI_temp_ksudt_00002_.flac
wiki/workflows/: extract-instrumental.json  isolate-vocals-song.json  remix-songs.json
