[project]
name = "audio-separation-nodes-comfyui"
description = "Separate audio track into stems (vocals, bass, drums, other). Along with tools to recombine, tempo match, slice/crop audio"
version = "1.4.0"
license = "LICENSE"
dependencies = ["librosa==0.10.2", "numpy", "torchaudio>=2.3.0", "moviepy"]

[project.urls]
Repository = "https://github.com/christian-byrne/audio-separation-nodes-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "audio-separation-nodes-comfyui"
Icon = "https://img.icons8.com/?size=100&id=gSULe4i1JTpL&format=png&color=000000"
