[project]
name = "audio-separation-nodes-comfyui"
description = "Separate audio track into stems (vocals, bass, drums, other). Along with tools to recombine, tempo match, slice/crop audio"
version = "2.0.0"
license = { file = "LICENSE" }
dependencies = ["librosa>=0.10.2,<1", "numpy", "torchaudio>=2.3.0", "moviepy"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["ruff>=0.14.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
per-file-ignores = {"tests/*" = ["E402"]}

[tool.ruff.lint.isort]
known-third-party = ["torch", "torchaudio", "librosa", "numpy", "moviepy", "comfy", "comfy_api", "folder_paths"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[project.urls]
Repository = "https://github.com/christian-byrne/audio-separation-nodes-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "audio-separation-nodes-comfyui"
Icon = "https://img.icons8.com/?size=100&id=gSULe4i1JTpL&format=png&color=000000"
